--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["cdylib"]
 reqwest = {version = "0.11.22", features = ["blocking"]}
 scraper = {version = "0.18.1"}
 pyo3 = {version = "0.20.0", features = ["abi3-py38"]}
+openssl-sys = "0.9.97"
