--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ crate-type = ["cdylib"]
 reqwest = {version = "0.11.22", features = ["blocking"]}
 scraper = {version = "0.18.1"}
 pyo3 = {version = "0.20.0", features = ["abi3-py38"]}
+
+[target.'cfg(not(target_os = "windows"))'.dependencies]
 openssl = { version = "0.10", features = ["vendored"] }
