--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ crate-type = ["cdylib"]
 reqwest = {version = "0.11.22", features = ["blocking"]}
 scraper = {version = "0.18.1"}
 pyo3 = {version = "0.20.0", features = ["abi3-py38"]}
-
+openssl = { version = "0.10", features = ["vendored"] }
 #[target.'cfg(target_env = "aarch64")'.dependencies]
 #openssl = { version = "0.10", features = ["vendored"] }
