--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ crate-type = ["cdylib"]
 reqwest = { version = "0.11.22", features = ["blocking"] }
 scraper = { version = "0.18.1" }
 pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
+
 [target.'cfg(target_arch = "aarch64")'.dependencies]
-openssl = { version = "0.10", features = ["vendored"] }
+# 对于 Linux aarch64 架构需要重新编译 openssl
+openssl = { version = "0.10.61", features = ["vendored"] }
