--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rshare"
-version = "0.1.7"
+version = "0.1.8"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 reqwest = { version = "0.11.22", features = ["blocking"] }
 scraper = { version = "0.18.1" }
 pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
+rayon = "1.5.1"
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 # 对于 Linux aarch64 架构需要重新编译 openssl
