--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,15 +12,15 @@
     {
       "type": "lldb",
       "request": "launch",
-      "name": "Debug main.rs",
+      "name": "Debug rshare_bin",
       "cargo": {
         "args": [
           "build",
-          "--bin=rshare",
+          "--bin=rshare_bin",
           "--package=rshare"
         ],
         "filter": {
-          "name": "rshare",
+          "name": "rshare_bin",
           "kind": "bin"
         },
         "env": {
