--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rshare"
-version = "0.1.13"
+version = "0.1.14"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,10 +15,10 @@ name = "rshare_bin"
 path = "src/main.rs"
 
 [dependencies]
-reqwest = { version = "0.11.22", features = ["blocking"] }
+reqwest = { version = "0.11.23", features = ["blocking"] }
 scraper = { version = "0.18.1" }
 pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
-rayon = "1.5.1"
+rayon = {version = "1.8.0"}
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 # 对于 Linux aarch64 架构需要重新编译 openssl
