--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,21 +1,14 @@
-site_name: My Docs
-# Read the Docs configuration file for MkDocs projects
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-# Required
-version: 2
-
-# Set the version of Python and other tools you might need
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.12"
-    rust: "1.64"
-
-mkdocs:
-  configuration: mkdocs.yml
-
-# Optionally declare the Python requirements required to build your docs
-python:
-  install:
-  - requirements: docs/requirements.txt
+site_name: RShare Docs
+site_url: https://github.com/jindaxiang/rshare
+nav:
+  - Home: index.md
+  - CI: ci.md
+  - VSCode: vscode.md
+theme:
+  name: mkdocs
+  locale: zh_CN
+  highlightjs: true
+  hljs_languages:
+    - yaml
+    - rust
+    - python
