--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: RShare Docs
 site_url: https://github.com/jindaxiang/rshare
 nav:
   - Home: index.md
+  - Rust: rust.md
   - CI: ci.md
   - VSCode: vscode.md
 theme:
