--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rshare"
-version = "0.1.20"
+version = "0.1.21"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,7 +17,7 @@ path = "src/main.rs"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking"] }
 scraper = { version = "0.18.1" }
-pyo3 = { version = "0.20", features = ["abi3-py38"] }
+pyo3 = { version = "0.20", features = ["abi3-py38", "auto-initialize"] }
 rayon = { version = "1.8" }
 numpy = { version = "0.20" }
 rand = { version = "0.8" }
