--- a/py-rshare/pyproject.toml
+++ b/py-rshare/pyproject.toml
@@ -14,7 +14,16 @@ authors = [
 ]
 readme = "README.md"
 classifiers = [
-  "Programming Language :: Python"
+  "Development Status :: 5 - Production/Stable",
+  "Environment :: Console",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Rust",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: Software Development :: Quality Assurance",
 ]
 dependencies = [
   "akshare",
