--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ resolver = "2"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.76"
-homepage = "https://pypi.org/project/rshare/"
-documentation = "https://pypi.org/project/rshare/"
+homepage = "https://pypi.org/project/rshare"
+documentation = "https://pypi.org/project/rshare"
 repository = "https://github.com/albertandking/rshare"
 authors = ["Albert King"]
 license = "MIT OR Apache-2.0"
