--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ rshare-req = { path = "crates/rshare-req" }
 rshare-cal = { path = "crates/rshare-cal" }
 rshare = { path = "crates/rshare" }
 
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { version = "0.11", features = ["blocking", "native-tls-vendored"] }
 scraper = { version = "0.19" }
 pyo3 = { version = "0.20", features = ["abi3-py38", "auto-initialize"] }
 rayon = { version = "1.9" }
